--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,13 +40,13 @@ steps:
     configuration: '$(buildConfiguration)'
   
 - powershell: |
-    Register-PSRepository -Name "PowershellAzureDevopsServices" -SourceLocation "$(PackageFeedEndpoint)" -Credential "$(PackageFeedEndpointCredential)" -InstallationPolicy Trusted
+    Register-PSRepository -Name "psRepo" -SourceLocation "$(PackageFeedEndpoint)" -Credential "$(PackageFeedEndpointCredential)" -InstallationPolicy Trusted
   displayName: 'Register Azure Artifacts Feed as PSRepository'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
 
 - powershell: |
-    Install-Module -Name Get-Hello -Repository PowershellAzureDevopsServices -Force
+    Install-Module -Name Get-Hello -Repository psRepo -Force
   displayName: 'Install Get-Hello PowerShell module'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
