--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   PackageFeedEndpoint: 'https://pkgs.dev.azure.com/ramiMSFTDevOps/PsRepository/_packaging/PsRepositoryFeed/nuget/v2'
-  PackageFeedEndpointCredential: '{"endpointCredentials": [{"endpoint":"$(PackageFeedEndpoint)", "username":"Admin", "password":"{{ secrets.AZURE_DEVOPS_PAT }}"}]}'
+  PackageFeedEndpointCredential: '{"endpointCredentials": [{"endpoint":"$(PackageFeedEndpoint)", "username":"Admin", "password":"{{ AZURE_DEVOPS_PAT }}"}]}'
 
 steps:
 - task: NuGetToolInstaller@1
@@ -47,7 +47,7 @@ steps:
         $VerbosePreference = "Continue"
         $DebugPreference = "Continue"
     }
-    Register-PSRepository -Name "psRepoPipeline" -SourceLocation "$(PackageFeedEndpoint)" -Credential "$(PackageFeedEndpointCredential)" -InstallationPolicy Trusted
+    Register-PSRepository -Name "psRepoPipeline" -SourceLocation '$(PackageFeedEndpoint)' -Credential '$(PackageFeedEndpointCredential)' -InstallationPolicy Trusted
   displayName: 'Register Azure Artifacts Feed as PSRepository'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
