--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,7 @@ steps:
   displayName: Get-PSRepository
 
 - powershell: |
-    Find-Module -Name "Get-Hello" | Install-Module
+    Find-Module -Name "Get-Hello" | Install-Module -Confirm:$false -Force
   displayName: 'Install Get-Hello PowerShell module'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
