--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,10 +58,7 @@ steps:
 
 - powershell: |
     Find-Module -Name "Get-Hello" | Install-Module -Confirm:$false -Force
-  displayName: 'Install Get-Hello PowerShell module'
+    Get-Hello
+  displayName: 'Install and run the Get-Hello PowerShell module'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
-
-- powershell: |
-    Get-Hello
-  displayName: Execute Get-Hello
