--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -29,10 +29,15 @@ steps:
 - pwsh: |
     [Net.ServicePointManager]::SecurityProtocol = [Net.ServicePointManager]::SecurityProtocol -bor [Net.SecurityProtocolType]::Tls12
     Register-PSRepository -Default -Verbose
-    Set-PSRepository -Name "psRepoPipeline" -SourceLocation '$(PackageFeedEndpoint)' -InstallationPolicy Trusted 
+    Set-PSRepository -Name "psRegisterDemo" -SourceLocation '$(PackageFeedEndpoint)' -InstallationPolicy Trusted 
   displayName: 'Register Azure Artifacts Feed as PSRepository'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
+
+- pwsh: |
+    # List available modules using PowerShellGet
+    Find-Module -AllAvailable
+  displayName: 'List Available PowerShell Modules'
 
 - pwsh: |
     Find-Module -Name "Get-Hello" | Install-Module -Confirm:$false -Force
