--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -27,9 +27,9 @@ steps:
   displayName: 'Install .NET SDK'
 
 - pwsh: |
-    [Net.ServicePointManager]::SecurityProtocol = [Net.ServicePointManager]::SecurityProtocol -bor [Net.SecurityProtocolType]::Tls12
-    Register-PSRepository -Default -Verbose
-    Set-PSRepository -Name "psRegisterDemo" -SourceLocation '$(PackageFeedEndpoint)' -InstallationPolicy Trusted 
+    [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12 
+    Install-Module PowerShellGet -RequiredVersion 2.2.4 -SkipPublisherCheck
+    Register-PSRepository -Name "psRepoPipeline" -SourceLocation '$(PackageFeedEndpoint)' -InstallationPolicy Trusted 
   displayName: 'Register Azure Artifacts Feed as PSRepository'
   env:
     VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: $(PackageFeedEndpointCredential)
