Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -36,7 +36,7 @@ steps:
 
 - pwsh: |
     # List available modules using PowerShellGet
-    Find-Module -AllAvailable
+    Get-InstalledModule
   displayName: 'List Available PowerShell Modules'
 
 - pwsh: |
