Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ stages:
 - stage: 'DemoTest2'
   jobs:
   - deployment: 'DeployToTest'
-    environment: 'Test'
+    environment: 'Demo'
     strategy:
         runOnce:
           deploy:
